add paginator  in /paginator route :>
